removed bugs of too big tiles, added comments

--- a/css/main-style.css
+++ b/css/main-style.css
@@ -53,7 +53,7 @@ body {
 
 #searchDiv #startDateInput{
   height:35px;
-  width: 75px;
+  width: 85px;
   font-size: .75em;
   padding:10px;
 }
