--- a/css/tile.css
+++ b/css/tile.css
@@ -47,7 +47,7 @@
 
 /* item-content is visible, and transitions size */
 .item-content {
-  padding: 30px;
+  padding: 20px;
   display:table;
   position:relative;
   width: 60px;
